2009-06-02  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added fix for bug #457206

2009-06-01  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added fix for bug #488720

2009-05-17  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added CalDAV fix for bug #455939

2009-05-05  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js 
	Make sure that the IMIP bar is present before
	trying to collapse it in imipOnUnload()

2009-05-01  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Bumped version to v0.9.4
	* Modified the code to handle the fact that
	the ACL manager from SOGo Connector could
	potentially not be present and we fallback in
	this case to what we had before (ie., prior
	to the ACL support addition)
	* Added fix for bug #486789

2009-04-06  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Bumped the version number to v0.9.3
	* Added patch for bug #462048
	* Adapted code fix for bug #416190
	* Added patches for bug #435166
	* Added patch for bug #415509

2009-03-18  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Bumped the version number to v0.9.2
	* Added src/calendar/base/content/today-pane.xul
	and backported fix for bug #412096
	* Backported patch from bug #470394

2009-02-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Commited change for version number (0.9.1)
	* Updated fix wrt bug #468723 

2009-01-05  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added "src/patches/462109.diff"
	so and modified repackage.sh so that we not add
	attendees to new events / tasks when creating them
	by conversion.

2008-12-30  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added src/patches/421329.diff
	src/calendar/base/content/sun-calendar-event-dialog-freebusy.xml
	to fix the issue with all-day events (on multiple days) + freebusy
	
2008-12-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * src/calendar/base/src/calDavCalendar.js
	Added fix for https://bugzilla.mozilla.org/show_bug.cgi?id=470934
